# L2Math

./: README.md  pyproject.toml
l2math/: __init__.py
session1/: tp1.ipynb  tp1_correction.ipynb  tp2_correction.ipynb
session2/: tp1.ipynb  tp1_correction.ipynb  tp2.ipynb  tp2_correction.ipynb  tp_0_bagging.ipynb  tp_0_boosting.ipynb  tp_0_knn.ipynb  tp_0_svm.ipynb  tp_0_tree.ipynb
session3/: agent.py  tp1.ipynb  tp2.ipynb
